crates/rome_cli/tests/snapshots/main_cases_biome_json_support/ci_biome_json.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "formatter": {
    "enabled": false
  }
}

```

## `file.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Checked 1 file(s) in <TIME>
```


