crates/rome_cli/tests/snapshots/main_cases_biome_json_support/linter_biome_json.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
        "recommended": true,
        "suspicious": {
            "noDebugger": "off"
        }
    }
  }
}
```

## `fix.js`

```js
debugger;

```

# Emitted Messages

```block
Fixed 1 file(s) in <TIME>
```


